--- a/src/pages/About/AboutWomenWings/aboutwomenwings.css
+++ b/src/pages/About/AboutWomenWings/aboutwomenwings.css
@@ -22,6 +22,7 @@ body {
     padding: 6rem 2rem;
     background: linear-gradient(120deg, #E8F0FE, #F3EFFF);
     animation: fadeIn 1.5s ease-in-out;
+    height: 1400px;
 }
 
 .about-women-wings .container {
