--- a/src/pages/About/AboutHope/abouthope.css
+++ b/src/pages/About/AboutHope/abouthope.css
@@ -13,6 +13,7 @@ body {
     padding: 60px 0;
     overflow: hidden;
     /* margin: 20px; */
+    height: 2400px;
     animation: fadeIn 1.5s ease-in-out;
     color: #333; /* Dark text for better readability on light background */
   }
