--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -444,16 +444,15 @@
 .image-container {
   position: relative;
   width: 100%;
-  height: 70px; /* Decreased the height */
+  height: 80px; /* Decreased the height */
 }
 
 .project-image {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensures image fills the container */
-  opacity: 0.4; /* Darker transparency */
+  object-fit: contain; /* Ensures the complete image is displayed */
   border-radius: 8px;
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, scale 0.3s ease;
 }
 
 .content-overlay {
@@ -474,7 +473,7 @@
 
 /* Hover effect for the image */
 .project-image:hover {
-  transform: scale(1.05); /* Slight zoom effect on hover */
+  transform: scale(2.0); /* Slight zoom effect on hover */
 }
 
 /* Optional: Button styling */
